force-app/main/default/objects/MUSW__Automation_Rule__c/MUSW__Automation_Rule__c.object-meta.xml
<CustomObject>
    <customHelp>MUSW__HelpInterface</customHelp>
    <description>Automation Rule Outcomes to apply when specific data criteria is met.</description>
    <label>Automation Rule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Automation Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>