force-app/main/default/objects/MUSW__Automation_Rule__c/fields/MUSW__CVRecordID__c.field-meta.xml
<CustomField>
    <fullName>MUSW__CVRecordID__c</fullName>
    <description>CV unique record id for the rule</description>
    <externalId>true</externalId>
    <label>CVRecordID</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>