force-app/main/default/objects/MUSW__Automation_Rule__c/fields/MUSW__Description__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Description__c</fullName>
    <description>This provides further details about the rule beyond the name. It may include the business case, or technical rationalization.</description>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>