force-app/main/default/objects/MUSW__Automation_Rule__c/fields/MUSW__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Effective_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>Date the rule starts to be active. If blank, rule is active as soon as made active.</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>