force-app/main/default/objects/MUSW__Automation_Rule__c/fields/MUSW__End_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__End_Date__c</fullName>
    <description>Date the rule ceases to be active. If blank, rule is active forever.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>