force-app/main/default/objects/MUSW__Automation_Rule__c/fields/MUSW__Filter_Index_Long__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Filter_Index_Long__c</fullName>
    <description>Legacy</description>
    <label>Filter Index Long</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>