force-app/main/default/objects/MUSW__Automation_Rule__c/fields/MUSW__Filter_Table_Index__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Filter_Table_Index__c</fullName>
    <description>Legacy</description>
    <label>Filter Table Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>