force-app/main/default/objects/MUSW__Automation_Rule__c/fields/MUSW__Order__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Order__c</fullName>
    <defaultValue>999</defaultValue>
    <description>Determines the order in which rules are evaluated and applied against the same triggering object. The default is 999 (typically last).</description>
    <label>Order</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>