force-app/main/default/objects/MUSW__Automation_Rule__c/fields/MUSW__Track_No__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Track_No__c</fullName>
    <description>The unique number assigned to the rule that it used for data migration.</description>
    <externalId>true</externalId>
    <label>Tracking Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>