force-app/main/default/objects/MUSW__Automation_Rule__c/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <description>Specifies under what context the rule is applied - i.e., as part of a batch, manually assessed, or triggered.</description>
    <inlineHelpText>eg. Assess for fee schedules, Trigger for immediate actions, and Batch for batch processes only. If blank, it is like Assess</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assess</fullName>
            </value>
            <value>
                <fullName>Trigger</fullName>
                <default>true</default>
                <label>Trigger</label>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>