force-app/main/default/objects/MUSW__Automation_Rule__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>MUSW__Order__c</columns>
    <columns>MUSW__Filter_Table_Index__c</columns>
    <columns>MUSW__Result_Table_Index__c</columns>
    <columns>MUSW__Active__c</columns>
    <columns>MUSW__Track_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>